# Dataset-Finder

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/dataset_finder/: __init__.py  cli.py  models.py  search.py
src/dataset_finder/clients/: encode.py  ncbi_geo.py
src/dataset_finder/exporters/: __init__.py  csv_exporter.py  json_exporter.py
tests/: test_cli.py  test_encode.py  test_exporters.py  test_ncbi_geo.py  test_search.py
