[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-finder"
version = "0.1.0"
description = "Discover, classify, and organize public functional-genomics datasets across species."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Srinivas Amla"}
]
keywords = [
    "bioinformatics",
    "functional genomics",
    "dataset discovery",
    "GEO",
    "SRA",
    "PubMed"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.32"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6"
]

[project.scripts]
dataset-finder = "dataset_finder.cli:main"

[project.urls]
Homepage = "https://github.com/Srini911/Dataset-Finder"
Repository = "https://github.com/Srini911/Dataset-Finder"
Issues = "https://github.com/Srini911/Dataset-Finder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
